# yappr

./: .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  eslint.config.ts  openapi.json  package.json  setup.sh
.github/workflows/: ci.yml
docs/: TUI_EXPLORATION.md  chat_ui_refactor_notes.md
python/: README.md  check_generate_output.py  check_sr.py  core.py  export_openapi.py  inspect_generate.py  inspect_kitten.py  inspect_kitten_instance.py  inspect_source.py  pyproject.toml  requirements.txt  result.py  server.py  test_kokoro.py
python/tests/: __init__.py  conftest.py  test_result.py  test_server.py
src/: declarations.d.ts
src/cli/: Root.tsx  app.tsx  constants.ts  index.ts  mcp-status.tsx  quit.ts  types.ts
src/cli/components/: footer.tsx  header.tsx  index.ts  loading.tsx  markdown.tsx
src/cli/hooks/: index.ts  useKeyboard.test.ts  useKeyboard.ts  useMcpStatuses.ts  useMutation.ts  usePreferences.ts  useQuery.ts  useVoiceToggle.ts
src/cli/lib/: preferences.test.ts  preferences.ts
src/cli/screens/: index.ts
src/cli/screens/chat/: index.ts  screen.tsx  store.tsx
src/cli/screens/listen/: index.ts  screen.tsx
src/cli/screens/main-menu/: screen.tsx
src/cli/screens/mcp-status/: index.ts  screen.tsx
src/cli/screens/settings/: index.ts  screen.tsx  store.tsx
src/cli/screens/speak/: index.ts  (+1 more)
src/cli/services/: yappr.ts
src/cli/tui/: App.tsx  constants.ts  index.ts
src/lib/: unstated.tsx
src/sdk/: audio-devices.ts  audio-manager.ts  audio_manager.ts  index.ts  mcp.ts  recorder.ts  schema.d.ts  table.ts  tts.ts  types.ts
(+36 files in other folders)
